# jarvis

./: .gitignore  XRAY_REPORT.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml  build-apk.yml  build.yml  release.yml
agent-ctx/: bugfix-voice-pipeline-main.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.c  jni_bridge_stub.c
app/src/main/java/com/jarvis/assistant/: JarvisApp.kt  MainActivity.kt
app/src/main/java/com/jarvis/assistant/actions/: ActionHandler.kt  AppRegistry.kt
app/src/main/java/com/jarvis/assistant/audio/: AudioEngine.kt
app/src/main/java/com/jarvis/assistant/automation/: AutonomousAgentEngine.kt  GeminiFunctionCaller.kt  GroqFunctionCaller.kt  RoutineEngine.kt  TaskExecutorBridge.kt  ToolDefinitions.kt
app/src/main/java/com/jarvis/assistant/brief/: DailyBriefGenerator.kt
app/src/main/java/com/jarvis/assistant/channels/: JarviewModel.kt
app/src/main/java/com/jarvis/assistant/data/: SettingsRepository.kt
app/src/main/java/com/jarvis/assistant/gesture/: GestureController.kt
app/src/main/java/com/jarvis/assistant/jni/: RustBridge.kt
app/src/main/java/com/jarvis/assistant/keepalive/: BootCompletedReceiver.kt  JarvisKeepAliveService.kt
app/src/main/java/com/jarvis/assistant/location/: LocationAwarenessManager.kt
app/src/main/java/com/jarvis/assistant/macros/: MacroEngine.kt
app/src/main/java/com/jarvis/assistant/memory/: ConversationMemory.kt  MemoryDao.kt
app/src/main/java/com/jarvis/assistant/monitor/: DeviceMonitor.kt  ProactiveDeviceMonitor.kt  SelfDiagnosticManager.kt  SystemDiagnosticManager.kt
app/src/main/java/com/jarvis/assistant/mood/: MoodDetector.kt
app/src/main/java/com/jarvis/assistant/network/: GeminiApiClient.kt  GroqApiClient.kt
app/src/main/java/com/jarvis/assistant/notifications/: JarvisWorkManager.kt  NotificationReaderService.kt
app/src/main/java/com/jarvis/assistant/overlay/: JarvisOverlayManager.kt
app/src/main/java/com/jarvis/assistant/permissions/: PermissionManager.kt
app/src/main/java/com/jarvis/assistant/privacy/: PrivacyVault.kt
app/src/main/java/com/jarvis/assistant/router/: CommandRouter.kt  SystemActionExecutor.kt
app/src/main/java/com/jarvis/assistant/search/: WebSearchEngine.kt
app/src/main/java/com/jarvis/assistant/services/: JarvisAccessibilityService.kt  JarvisForegroundService.kt  JarvisNotificationChannels.kt  JarvisSensoryService.kt  JarvisSpeechService.kt  OverlayCursorService.kt
app/src/main/java/com/jarvis/assistant/shizuku/: PermissionBypassManager.kt  ShizukuManager.kt
app/src/main/java/com/jarvis/assistant/shortcuts/: JarvisShortcutReceiver.kt
app/src/main/java/com/jarvis/assistant/smarthome/: HomeAssistantBridge.kt  MqttManager.kt
app/src/main/java/com/jarvis/assistant/uiautomator/: UIAutomatorHelper.kt
app/src/main/java/com/jarvis/assistant/viewmodel/: JarvisViewModel.kt
app/src/main/java/com/jarvis/assistant/vision/: VisionManager.kt
app/src/main/res/drawable/: ic_camera_shortcut.xml  ic_mic_shortcut.xml  ic_screen_shortcut.xml  widget_background.xml  widget_btn_bg.xml
app/src/main/res/layout/: jarvis_widget.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: accessibility_service_config.xml  jarvis_widget_info.xml  network_security_config.xml  shortcuts.xml
gradle/: libs.versions.toml
rust/: Cargo.toml  build.sh
rust/src/: audio.rs  emotion.rs  gemini.rs  jni_helpers.rs  lib.rs  voice_pattern.rs  wake_word.rs
(+20 files in other folders)
