[package]
name = "jarvis-rust"
version = "5.0.0"
edition = "2021"
description = "JARVIS AI Assistant — Rust Core Backend (JNI)"
authors = ["JarvisDev"]

[lib]
crate-type = ["cdylib"]
name = "jarvis_rust"

[dependencies]
jni = { version = "0.21", features = ["invocation"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6.2"
num-complex = "0.4"
log = "0.4"
android_logger = "0.14"
anyhow = "1"
thiserror = "1"
base64 = "0.22"
chrono = "0.4"
lazy_static = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
